# pea-audit

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  ETFTracker.md  LICENSE  PUBLISHING.md  README.md  SECURITY.md  api.py  audit_cli.py  audit_portfolio.py  audit_recheck.py  cli.py  crontab.example  dashboard.py  docker-compose.yml  positions.csv.example  pyproject.toml  requirements.txt
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml  release.yml
etftracker/: __init__.py  data_source.py  portfolio.py
evals/: baseline.json  run.py
evals/cases/: amundi_msci_world_swap_ii.yaml  amundi_pea_monde_msci_world.yaml  amundi_pea_msci_em.yaml  amundi_pea_nasdaq_100.yaml  amundi_pea_sp500.yaml  amundi_pea_us_tech.yaml  bnp_easy_sp500.yaml  ishares_core_msci_em_imi.yaml  ishares_core_msci_world.yaml  ishares_core_sp500.yaml  ishares_nasdaq_100.yaml  vanguard_ftse_all_world.yaml  vanguard_sp500.yaml
examples/: 01_basic_audit.py  02_audit_by_ticker.py  03_custom_llm.py  04_custom_kid_source.py  05_async_batch.py  README.md
pea_audit/: __init__.py  cache.py  compare.py  core.py  isin.py  pdf.py  prompts.py  ticker.py
pea_audit/llm/: __init__.py  base.py  ollama.py
pea_audit/prompts/: audit_v1.md  audit_v2.md
pea_audit/sources/: __init__.py  amundi.py  base.py  blackrock.py  bnp.py  vanguard.py
tests/: conftest.py  test_audit.py  test_cache.py  test_compare.py  test_isin.py  test_prompts.py  test_ticker.py
